// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`metaverse hygen-extension hygen-extensionhygen-js-new: hygen-js new 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "added",
      "subject": "given/hygen-js/new.md",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse hygen-templates hygen-templatesadd-unless-exists-new---message-foo: add-unless-exists new --message foo 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "added",
      "subject": "given/add-unless-exists/foo/always.txt",
      "timing": -1,
      "type": "add",
    },
    Object {
      "status": "added",
      "subject": "given/add-unless-exists/foo/always.txt",
      "timing": -1,
      "type": "add",
    },
    Object {
      "status": "skipped",
      "subject": "given/add-unless-exists/foo/always.txt",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse hygen-templates hygen-templatesattrs-in-body-new: attrs-in-body new 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "added",
      "subject": "given/attrs-in-body/hello.txt",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse hygen-templates hygen-templatescli-prefill-prompt-vars-falsy-values-are-ok-foobar---include_something-false: cli-prefill-prompt-vars falsy-values-are-ok foobar --include_something false 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "added",
      "subject": "given/cli-prefill-prompt-vars/falsy.md",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse hygen-templates hygen-templatescli-prefill-prompt-vars-name-is-special-foobar: cli-prefill-prompt-vars name-is-special foobar 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "added",
      "subject": "given/cli-prefill-prompt-vars/name-is-special.md",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse hygen-templates hygen-templatescli-prefill-prompt-vars-new---message-from-cli-hello-from-cli: cli-prefill-prompt-vars new --message-from-cli hello-from-cli 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "added",
      "subject": "given/cli-prefill-prompt-vars/new.md",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse hygen-templates hygen-templatesconditional-rendering-new---notGiven: conditional-rendering new --notGiven 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "added",
      "subject": "given/conditional/always.txt",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse hygen-templates hygen-templatesexisting-params-new---email-premade-email@foobar.com: existing-params new --email premade-email@foobar.com 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "added",
      "subject": "given/existing-params/new.md",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse hygen-templates hygen-templatesexisting-params-new-params-alias---email-premade-email@foobar.com: existing-params new-params-alias --email premade-email@foobar.com 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "added",
      "subject": "given/existing-params/new-params-alias.md",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse hygen-templates hygen-templatesindex-js-existing-params-new---email-premade-email@foobar.com: index-js-existing-params new --email premade-email@foobar.com 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "added",
      "subject": "given/index-js-existing-params/new.md",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse hygen-templates hygen-templatesindex-js-existing-params-new-params-alias---email-premade-email@foobar.com: index-js-existing-params new-params-alias --email premade-email@foobar.com 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "added",
      "subject": "given/index-js-existing-params/new-params-alias.md",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse hygen-templates hygen-templatesinflection-new---name-person: inflection new --name person 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "added",
      "subject": "given/my_app/people.md",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse hygen-templates hygen-templatesinit-self: init self 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "added",
      "subject": "given/_templates/sample/new/hello.ejs.t",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse hygen-templates hygen-templatesmailer-new: mailer new 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "added",
      "subject": "given/app/mailers/message.js",
      "timing": -1,
      "type": "add",
    },
    Object {
      "status": "added",
      "subject": "given/app/mailers/foo/html.ejs",
      "timing": -1,
      "type": "add",
    },
    Object {
      "status": "added",
      "subject": "given/app/mailers/foo/subject.ejs",
      "timing": -1,
      "type": "add",
    },
    Object {
      "status": "added",
      "subject": "given/app/mailers/foo/text.ejs",
      "timing": -1,
      "type": "add",
    },
    Object {
      "status": "inject",
      "subject": "given/app/mailers/foo/html.ejs",
      "timing": -1,
      "type": "inject",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse hygen-templates hygen-templatesoverwrite-no-base: overwrite-no base 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "added",
      "subject": "given/overwrite-no/new.md",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse hygen-templates hygen-templatesoverwrite-no-over-[object Object]: [object Object] 1`] = `
Object {
  "actions": Array [],
  "success": false,
  "time": 0,
}
`;

exports[`metaverse hygen-templates hygen-templatesoverwrite-yes-base: overwrite-yes base 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "added",
      "subject": "given/overwrite-yes/new.md",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse hygen-templates hygen-templatesoverwrite-yes-over: overwrite-yes over 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "added",
      "subject": "given/overwrite-yes/new.md",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse hygen-templates hygen-templatespositional-name-new-acmecorp: positional-name new acmecorp 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "added",
      "subject": "given/positional-name/acmecorp/always.txt",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse hygen-templates hygen-templatesrecursive-prompt-new: recursive-prompt new 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "added",
      "subject": "given/recursive-prompt/new.md",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse hygen-templates hygen-templatesshell-new---name-foo: shell new --name foo 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "executed",
      "subject": "/__tests__/metaverse/hygen-templates/given/shell/hello.piped",
      "timing": -1,
      "type": "shell",
    },
    Object {
      "status": "executed",
      "subject": "/__tests__/metaverse/hygen-templates/given/shell/foo.hello",
      "timing": -1,
      "type": "shell",
    },
    Object {
      "status": "added",
      "subject": "given/shell/hmm.txt",
      "timing": -1,
      "type": "add",
    },
    Object {
      "status": "executed",
      "subject": "/__tests__/metaverse/hygen-templates/given/shell/side-effect.hello",
      "timing": -1,
      "type": "shell",
    },
  ],
  "success": true,
  "time": 0,
}
`;

exports[`metaverse hygen-templates hygen-templatesworker-new---name-foo: worker new --name foo 1`] = `
Object {
  "actions": Array [
    Object {
      "status": "added",
      "subject": "given/app/workers/foo.js",
      "timing": -1,
      "type": "add",
    },
  ],
  "success": true,
  "time": 0,
}
`;
